WanaLyzer/out/numpy/typing/tests/data/fail/nditer.pyi
import numpy as np

class Test(np.nditer): ...
